Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: game-20487345
  name: service-2048102
spec:
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: app-2048101
