dsterra.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: game-2048120
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: game-2048120
  name: deployment-20489020
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: app-20489220
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-20489220
    spec:
      containers:
      - image: 578813437933.dkr.ecr.us-east-1.amazonaws.com/iaf
        imagePullPolicy: Always
        name: iaf
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  namespace: game-2048120
  name: service-20489120
spec:
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: app-20489220
---
